--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,8 @@
     <meta name="msapplication-TitleImage" content="img/ncs.png">
 </head>
 <body>
-ROBOTO
+    <p>Nurse Call System</p>
+
+    <script defer src="js/app.js"></script>
 </body>
 </html>
