--- a/test.html
+++ b/test.html
@@ -79,7 +79,7 @@
         }
         .hdr_label {
             font-size: 0.7rem;
-            color: silver;
+            color: yellow;
         }
         .hdr_value {
             font-size: 1rem;
